# swag-labs

./: .gitignore  README.md  pyproject.toml
data/: products.py  users.py
notifications/: config.json
swag_labs/model/: application.py
swag_labs/model/controls/: buttons.py  dropdowns.py  text_fields.py
swag_labs/model/pages/: CheckoutPage.py  InventoryPage.py  LoginPage.py  StartPage.py  StoreShelfPage.py
tests/: conftest.py  test_login.py  test_order.py
